# cli-sky

./: BlogLexicon.json  Cargo.toml  LICENSE.txt  README.md  config.json
lexicon/: client.rs  record.rs
src/: README.txt  lib.rs  main.rs
src/lexicon/: client.rs  mod.rs  wrapper.rs
