[package]
name = "cli-sky"
version = "0.2.0"
edition = "2024"
authors = ["Sam Katevatis <samkatevatis@gmail.com>"]
license = "Apache-2.0"
description = "A CLI AT protocol client"
readme = "README.md"
homepage = "https://github.com/Samarinara/cli-sky"
repository = "https://github.com/Samarinara/cli-sky"
keywords = ["cli", "bsky", "bluesky", "atprotocol", "ATrium"]
categories = ["command-line-utilities"]

[dependencies]
bsky-sdk = "0.1.19"
atrium-api = "0.25.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rpassword = "7.4.0"
serde_json = "1.0.140"
quit = "2.0.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }