[package]
name = "bsky-cli"
version = "0.4.0"
edition = "2021"
authors = ["Sam Katevatis <samkatevatis@gmail.com>"]
license = "Apache-2.0"
description = "A CLI AT protocol client"
readme = "README.md"
homepage = "https://github.com/Samarinara/cli-sky"
repository = "https://github.com/Samarinara/cli-sky"
keywords = ["cli", "bsky", "bluesky", "atprotocol", "ATrium"]
categories = ["command-line-utilities"]

[dependencies]
bsky-sdk = "0.1.0"
atrium-api = "0.25.4"
atrium-xrpc = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
keyring = "2.0"
rpassword = "7.2"
chrono = "0.4"
quit = "2.0.0"
serde_with = "3.12.0"